app/assets/stylesheets/application.scss
body, html {
  height: 100%;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  transition:
    color 0.2s,
    background-color 0.2s;
}

#content {
  padding-top: 1rem;
  padding-bottom: 2rem;
  min-height: 100vh;
}

footer a {
  text-decoration: none;
  display: block;
}

.how-it-works {
  .row {
    margin-top: 2rem;
  }

  i {
    color: #ff8a02;
    padding-right: 0.5rem;
  }

  .col-1 {
    padding-right: 20px;
    text-align: center;
  }
}

label {
  font-weight: bold;
}

.field-description {
  font-size: 0.8rem;
  color: #999;
}

h1 {
  text-transform: uppercase;
  font-size: 1.5rem;
  font-weight: bold;
}

h2 {
  padding-top: 1rem;
  text-transform: uppercase;
  font-size: 1.3rem;
  font-weight: bold;
}

h3 {
    padding-top: 1rem;
    text-transform: uppercase;
    font-size: 1.1rem;
    font-weight: bold;
}

h4 {
  padding-top: 1rem;
  text-transform: uppercase;
  font-size: 1rem;
  font-weight: bold;
}

.event-description > * {
  transform: scale(0.9);
  transform-origin: top left;
  overflow: hidden;
}

abbr[title] {
  text-decoration: none !important;
  color: #aaa
}

.navbar-icon {
  width: 20px;
  margin-left: 10px;
  text-align: center;
  display: inline-block;
}

.dropdown-menu-end {
  right: auto; /* Reset the right position */
  left: 0; /* Align to the left */
}

#content {
  margin-top: 1rem;
}

#logo-hophub {
  margin-bottom: 2rem;
}

#entry-table hr {
  margin-top: 1rem;
}

#entry-table a.btn {
  margin-top: 4px;
}

a {
  text-decoration: none;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-outline-primary:hover,
.btn-outline-primary:focus,
.btn-outline-primary:active {
  background-image: linear-gradient(to right, #ff3af1, #ff8b02);
}

.btn-danger {
    background-image: linear-gradient(to right, #dc3545, #972430);
  }

.btn {
  box-shadow: 0 3px 10px 0 rgba(137, 156, 156, 0.75);
}

:root {
  --altcha-border-width: var(--bs-border-width);
  --altcha-border-radius: var(--bs-border-radius);
  --altcha-color-base: var(--bs-form-color);
  --altcha-color-border: var(--bs-border-color);
  --altcha-color-text: currentColor;
  --altcha-color-border-focus: currentColor;
  --altcha-color-error-text: var(--bs-form-invalid-color);
  --altcha-color-footer-bg: var(--bs-body-bg);
  --altcha-max-width: 100%;
}

.altcha-label label {
  font-size: 1rem;
  font-weight: normal;
}

.altcha-label {
  padding-left: 1rem;
}

.altcha-main {
  margin-left: 0.7rem;
}

.altcha-main svg {
  margin-top: 0.75rem;
}

.altcha-error {
  width: 100%;
  margin-top: 0.25rem;
  font-size: 0.875em;
  color: var(--bs-form-invalid-color);
}

